[tool.poetry]
name = "port-check-exporter"
version = "0.1.0"
description = ""
authors = ["Erik Lilja <erikvlilja@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
toml = "^0.10.0"
prometheus-client = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
